--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 		}
     ],
     "require": {
-        "yiisoft/yii2": "~2.0.4"
+        "yiisoft/yii2": "~2.0.4",
+        "kartik-v/yii2-password": "@dev"
     },
     "suggest": {
         "yiisoft/yii2-bootstrap": "Used when using layout 'left-menu', 'right-menu' or 'top-menu'"
